--- a/src/main/webapp/WEB-INF/jsp/index.html
+++ b/src/main/webapp/WEB-INF/jsp/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Phone Base</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
 
